<resources>
    <string name="app_name">Gdelete</string>
    <string name="hanif">hanif</string>
    <string name="hani">hani</string>
    <string name="han">han</string>
    <string name="ha">ha</string>
    <string name="h">h</string>
    <string name="go_for_deleting">Go For Deleting</string>
    <string name="more_apps">More Apps</string>
    <string name="points">points</string>
    <string name="hanifa">hanifa</string>
    <string name="hanifar">hanifar</string>
    <string name="delete_mails_over_2_mb">Delete Mails over 2 Mb</string>
    <string name="delete_mails_over_5_mb">Delete Mails over 5 Mb</string>
    <string name="delete_mails_over_10_mb">Delete Mails over 10 Mb</string>
    <string name="delete_all_mails">Delete All Mails</string>
    <string name="rate_us">Rate us</string>

</resources>